# propriedade_rural

./: db.sqlite3  pyproject.toml
config/: settings.py
propriedade_rural/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
propriedade_rural/migrations/: 0001_initial.py  0002_rename_data_admissao_funcionario_dataadmissao_and_more.py
